2004-01-31  Jon Trowbridge <trow@ximian.com>

	* src/bacon-cd-selection.c:
	* src/bacon-message-connection.c:
	* src/bacon-v4l-selection.c:
	* src/bacon-video-widget-properties.c:
	* src/bacon-video-widget-xine.c:
	* src/scrsaver.c:
	* src/totem-download.c:
	* src/totem-pl-parser.c:
	* src/totem-playlist.c:
	* src/totem-preferences.c:
	* src/totem-video-thumbnailer.c:
	* src/vanity.c: Paranoia.  Replaced a bunch of instances of
	'foo == TRUE' with 'foo != FALSE'.
	
	* src/bacon-message-connection.c:
	* src/bacon-video-widget-properties.c:
	* src/totem-download.c:
	* src/totem-pl-parser.c:
	* src/totem-video-thumbnailer.c:
	* src/totem.c:
	* src/vanity.c:
	* src/video-dev.c: Corrected usage of g_build_filename.  This
	fixes bug #132674.

	* src/totem.c (seek_slider_pressed_cb): Set seeking to TRUE
	in the status bar.
	(seek_slider_changed_cb): Added.  If we are dragging the seek
	slider, put the current seek position in the status bar.
	(seek_slider_released_cb): Set seeking to FALSE in the status
	bar.
	(totem_callback_connect): Connect seek_slider_changed_cb
	to the adjustment's "value_changed" signal.

	* src/totem-statusbar.c (totem_statusbar_set_seeking): Added.
	Controls the seeking flag.
	(totem_statusbar_update_time): If the seeking flag is set,
	append 'Seeking to' to the status bar label.

2004-01-30  Jon Trowbridge <trow@ximian.com>

	* src/bacon-video-widget-gst.c (bacon_video_widget_seek_time):
	Multiply the seek time by GST_MSECOND.  This fixes (among other
	things) relative seeking.

2004-01-28  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/totem-preferences.c: (totem_setup_preferences):
	Remove an gconf call, info was already available in a variable.

2004-01-25  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (store_tag),
	(bacon_video_widget_signal_idler): Implement metadata with the new 
	architecture.

2004-01-25  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_instance_init),