@@ -1,3 +1,11 @@
+2004-02-01  Julien MOUTTE  <julien@moutte.net>
+
+	* src/bacon-video-widget-gst.c:
+	(bacon_video_widget_motion_notify_callback),
+	(bacon_video_widget_instance_init), (bacon_video_widget_open),
+	(bacon_video_widget_new): Fixing for latest GStreamer CVS Head, fixing 
+	mouse motion in fullscreen mode. Using opt again.
+
 2004-01-31  Jon Trowbridge <trow@ximian.com>
 
 	* src/bacon-cd-selection.c:
